Execution of silk.jar updated